--- a/src/main/resources/templates/principal.html
+++ b/src/main/resources/templates/principal.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Principal</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
+<link rel="stylesheet" th:href="@{resources/css/principal.css}" />
+<div th:replace="librerias::librerias" th:remove="tag"></div>
 </head>
 <body>
-	<h1>Funciona</h1>
-	<div th:each="u: ${usuario}">
-	<p th:text="'Bienvenido: ' + ${u.nombre}"></p>
-	<p th:each="r: ${rol}" 
-	   th:if="${r.id_Rol}==${u.id_Rol}"
-	   th:text="'Rol: ' + ${r.descrip}"></p>
+	<!-- INSERTAR MENU LATERAL -->
+	<div class="" th:replace="menulateral::menu"></div>
+	<header class="encabezado block"> Header </header>
+	<div class="contenido">
+		<div th:replace="perfilesPuesto::perfilpuesto"></div>
 	</div>
 </body>
 </html>
