Mejoramiento en el diseño del Menu lateral

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@
 			<div class="row g-0">
 				<div class="login-left col-md-6 border color-login rounded">
 					<div class="card-body mt-5">
-						<form th:action="@{/validar}" method="post" th:object="${usuario}"
+						<form th:action="@{/home}" method="post" th:object="${usuario}"
 							class="d-flex flex-column">
 							<div class="form-group">
 								<label for="exampleInputEmail1" class="card-text">Email</label>
