--- a/src/main/resources/static/resources/css/principal.css
+++ b/src/main/resources/static/resources/css/principal.css
@@ -10,7 +10,6 @@ body{
 	background: #2A77EA;
 	grid-row: 1 / span 3;
 	grid-column: 1;
-	padding: 2em 0 2em 0;
 }
 .encabezado{
 	background: #EA1C24; 
@@ -40,3 +39,6 @@ body{
 	color: white;
 	font-size: 14pt
 } 
+.txt-bold{
+	font-weight: bold;
+}
