--- a/src/main/resources/templates/perfilesPuesto.html
+++ b/src/main/resources/templates/perfilesPuesto.html
@@ -14,159 +14,159 @@
 		aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered modal-lg">
 			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="staticBackdropLabel">PERFIL DE PUESTO</h5>
+				<div class="modal-header bg-danger bg-gradient">
+					<h5 class="modal-title text-white" id="staticBackdropLabel">PERFIL
+						DE PUESTO</h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal"
+						aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
 					<form id="idRegistrar" method="post"
 						action="ServletTrabajador?tipo=REGISTRAR" data-toggle="validator"
 						role="form">
 						<fieldset class="form-group border p-3">
-						<legend class="col-form-label col-sm-2 pt-0">Encabezado</legend>
-						<div class="form-row">
-							<div class="col">
-								<div class="form-row">
-								    	<label for="exampleFormControlInput1">Clave de Puesto:</label>
-								    <div class="col">
-								    	<input type="text" class="form-control"  placeholder="Clave...">
-								    </div>
-							    </div>
-						    </div>
-						    <div class="col">
-						        <div class="form-row">
-								    	<label for="exampleFormControlInput2">Fecha de elaboración:</label>
-								    <div class="col">
-								    	<input type="date" class="form-control"  placeholder="Fecha...">
-								    </div>
-							    </div>
-						    </div>
-						</div>
-						<br>
-						<div class="form-row">
-							<div class="col">
-								<div class="form-row">
-									 	<label for="exampleFormControlInput3">Puesto:</label>
-									 <div class="col">
-									 	<input type="text" class="form-control"  placeholder="Nombre del puesto...">
-									 </div>
-								</div>
-							</div>
-							<div class="col">
-								 <div class="form-row">
-									 	<label for="exampleFormControlSelect1">Unidad Organica:</label>
-									 <div class="col">
-										 <select class="form-control">
-										 	<option>1</option>
-										    <option>2</option>
-										    <option>3</option>
-										    <option>4</option>
-										    <option>5</option>
-										 </select>
-									 </div>
-								 </div>
-							</div>
-						</div>
-						<br>
-						<div class="form-group">
+							<legend class="col-form-label col-sm-2 pt-0">Encabezado</legend>
 							<div class="form-row">
-							    <label for="exampleFormControlInput4">Responde a:</label>
 								<div class="col">
-									<input type="text" class="form-control"  placeholder="Nombre...">
+									<div class="form-row">
+										<label for="exampleFormControlInput3">Puesto:</label>
+										<div class="col">
+											<input type="text" class="form-control"
+												placeholder="Nombre del puesto...">
+										</div>
+									</div>
 								</div>
-								<div>
+								<div class="col">
+									<div class="form-row">
+										<label for="exampleFormControlSelect1">Unidad
+											Organica:</label>
+										<div class="col">
+											<select class="form-control">
+												<option>1</option>
+												<option>2</option>
+												<option>3</option>
+												<option>4</option>
+												<option>5</option>
+											</select>
+										</div>
+									</div>
+								</div>
+							</div>
+							<br>
+							<div class="form-group">
+								<div class="form-row">
+									<label for="exampleFormControlInput4">Responde a:</label>
 									<div class="col">
-							        <div class="form-row">
-									    	<label for="exampleFormControlInput8">Turno de trabajo:</label>
-									    <div class="col">
-									    	<input type="text" class="form-control"  placeholder="Turno...">
-									    </div>
-								    </div>
-							    </div>
+										<input type="text" class="form-control"
+											placeholder="Nombre...">
+									</div>
+									<div>
+										<div class="col">
+											<div class="form-row">
+												<label for="exampleFormControlInput8">Turno de
+													trabajo:</label>
+												<div class="col">
+													<select class="form-control">
+														<option>DIURNO</option>
+														<option>NOCHE</option>
+														<option>MIXTO</option>
+													</select>
+												</div>
+											</div>
+										</div>
+									</div>
 								</div>
-						     </div>
-						</div>
+							</div>
 						</fieldset>
 						<br>
 						<div class="form-group">
-							    <label for="exampleFormControlTextarea1">Descripción del Puesto:</label>
-								<div class="col">
-									<textarea class="form-control" rows="3" 
+							<label for="exampleFormControlTextarea1">Descripción del
+								Puesto:</label>
+							<div class="col">
+								<textarea class="form-control" rows="3"
 									placeholder="Descripción..."></textarea>
-								</div>
-						     </div>
+							</div>
+						</div>
 						<br>
 						<div class="form-row">
 							<fieldset class="form-group border p-3">
 								<legend class="col-form-label col-sm-2 pt-0">Estudios</legend>
 								<div class="form-row">
 									<div class="col">
-									    <div class="form-row">
-										    <div class="col">
-									    		<label for="exampleFormControlInput5">Educ. Media completa (secundaria)</label>
+										<div class="form-row">
+											<div class="col">
+												<label for="exampleFormControlInput5">Educ. Media
+													completa (secundaria)</label>
 											</div>
 											<div class="col">
 												<div class="form-check form-check-inline">
-												  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-												  <label class="form-check-label" for="inlineRadio1">Si</label>
+													<input class="form-check-input" type="radio"
+														name="inlineRadioOptions" id="inlineRadio1"
+														value="option1"> <label class="form-check-label"
+														for="inlineRadio1">Si</label>
 												</div>
 											</div>
 										</div>
 									</div>
 									<div class="col">
-									    <div class="form-row">
-										    <div class="col">
-									    		<label for="exampleFormControlInput6">Educ. Técnico-Profesional (técnico medio o superior)</label>
+										<div class="form-row">
+											<div class="col">
+												<label for="exampleFormControlInput6">Educ.
+													Técnico-Profesional (técnico medio o superior)</label>
 											</div>
 											<div class="col">
 												<div class="form-check form-check-inline">
-												  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-												  <label class="form-check-label" for="inlineRadio1">Si</label>
+													<input class="form-check-input" type="radio"
+														name="inlineRadioOptions" id="inlineRadio1"
+														value="option1"> <label class="form-check-label"
+														for="inlineRadio1">Si</label>
 												</div>
 											</div>
 										</div>
 									</div>
 									<div class="col">
-									    <div class="form-row">
-										    <div class="col">
-									    		<label for="exampleFormControlInput7">Educ. Universitaria</label>
+										<div class="form-row">
+											<div class="col">
+												<label for="exampleFormControlInput7">Educ.
+													Universitaria</label>
 											</div>
 											<div class="col">
 												<div class="form-check form-check-inline">
-												  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-												  <label class="form-check-label" for="inlineRadio1">Si</label>
+													<input class="form-check-input" type="radio"
+														name="inlineRadioOptions" id="inlineRadio1"
+														value="option1"> <label class="form-check-label"
+														for="inlineRadio1">Si</label>
 												</div>
 											</div>
 										</div>
 									</div>
 								</div>
-								<div class="form-row">
-									
-								</div>
+								<div class="form-row"></div>
 							</fieldset>
 						</div>
 						<br>
 						<fieldset class="form-group border p-3">
-						<legend class="col-form-label col-sm-2 pt-0">Edad</legend>
-						<div class="form-group">
-							<div class="form-row">
-								<div class="col">
+							<legend class="col-form-label col-sm-2 pt-0">Edad</legend>
+							<div class="form-group">
+								<div class="form-row">
+									<div class="col">
 										<label for="exampleFormControlInput9">Desde:</label>
-									<div class="col">
-								    	<input type="text" class="form-control"  placeholder="Edad...">
+										<div class="col">
+											<input type="text" class="form-control" placeholder="Edad...">
+										</div>
 									</div>
-								</div>
-								<div class="col">
-									<label for="exampleFormControlInput9">Hasta:</label>
 									<div class="col">
-								    	<input type="text" class="form-control"  placeholder="Edad...">
+										<label for="exampleFormControlInput9">Hasta:</label>
+										<div class="col">
+											<input type="text" class="form-control" placeholder="Edad...">
+										</div>
 									</div>
 								</div>
 							</div>
-						</div>
 						</fieldset>
 						<div class="modal-footer">
-							<button type="button" class="btn btn-secondary" id="btn-cerrar"
-								data-bs-dismiss="modal">Cerrar</button>
+							<button type="button" class="btn btn-secondary">Limpiar
+							</button>
 							<button type="submit" class="btn btn-success">Grabar</button>
 						</div>
 					</form>
