--- a/src/main/resources/templates/perfilesPuesto.html
+++ b/src/main/resources/templates/perfilesPuesto.html
@@ -2,206 +2,44 @@
 	<center>
 		<h1>PERFILES DE PUESTOS</h1>
 	</center>
-	<!-- Modal -->
 	<header class="cabezera d-block">
-		<!-- Button trigger modal -->
-		<button type="button" class="btn btn-primary" data-bs-toggle="modal"
-			data-bs-target="#staticBackdrop">Registrar Perfil de Puesto</button>
+		<a href="/cargarPerPue" class="btn btn-primary">
+			Registrar Perfil de Puesto
+		</a>
 	</header>
-	<!-- Modal -->
-	<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static"
-		data-bs-keyboard="false" tabindex="-1"
-		aria-labelledby="staticBackdropLabel" aria-hidden="true">
-		<div class="modal-dialog modal-dialog-centered modal-lg">
-			<div class="modal-content">
-				<div class="modal-header bg-danger bg-gradient">
-					<h5 class="modal-title text-white" id="staticBackdropLabel">PERFIL
-						DE PUESTO</h5>
-					<button type="button" class="btn-close" data-bs-dismiss="modal"
-						aria-label="Close"></button>
-				</div>
-				<div class="modal-body">
-					<form th:action="@{/grabarPerfilPuesto}" 
-						method="post" th:object="${perfilPuesto}">
-						<fieldset class="form-group border p-3">
-							<legend class="col-form-label col-sm-2 pt-0">Encabezado</legend>
-							<div class="form-row">
-								<div class="col">
-									<div class="form-row">
-										<label for="exampleFormControlInput3">Puesto:</label>
-										<div class="col">
-											<input th:field="*{nombre}" type="text" class="form-control"
-												placeholder="Nombre del puesto...">
-										</div>
-									</div>
-								</div>
-								<div class="col">
-									<div class="form-row">
-										<label for="exampleFormControlSelect1">Unidad
-											Organica:</label>
-										<div class="col">
-											<select th:field="*{id_uo}" class="form-control">
-												<option value="0">Seleccione...</option>
-												<option th:each="u: ${lstUnidadesOrganicas}" th:value="${u.id_uo}" th:text="${u.nom_uo}"></option>
-											</select>
-										</div>
-									</div>
-								</div>
-							</div>
-							<br>
-							<div class="form-group">
-								<div class="form-row">
-									<label for="exampleFormControlInput4">Responde a:</label>
-									<div class="col">
-									<!-- th:if="${u.id_uo}==${}" th:each="u: ${lstUnidadesOrganicas}"  
-										 th:text="${u.nom_jefe_uniOrg}" -->
-										<input type="text" readonly>
-									</div>
-									<div>
-										<div class="col">
-											<div class="form-row">
-												<label for="exampleFormControlInput8">Turno de
-													trabajo:</label>
-												<div class="col">
-													<select th:field="*{turno}" class="form-control">
-														<option th:value="'Diurno'">DIURNO</option>
-														<option th:value="'Noche'">NOCHE</option>
-														<option th:value="'Mixto'">MIXTO</option>
-													</select>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</fieldset>
-						<br>
-						<div class="form-group">
-							<label for="exampleFormControlTextarea1">Descripción del
-								Puesto:</label>
-							<div class="col">
-								<textarea th:field="*{descrip_perfil}" class="form-control" rows="3"
-									placeholder="Descripción..."></textarea>
-							</div>
-						</div>
-						<br>
-						<div class="form-row">
-							<fieldset class="form-group border p-3">
-								<legend class="col-form-label col-sm-2 pt-0">Estudios</legend>
-								<div class="form-row">
-									<div class="col">
-										<div class="form-row">
-											<div class="col">
-												<label for="exampleFormControlInput5">Educ. Media
-													completa (secundaria)</label>
-											</div>
-											<div class="col">
-												<div class="form-check form-check-inline">
-													<input th:field="*{estudios}" class="form-check-input" type="radio"
-														name="inlineRadioOptions" id="inlineRadio1"
-														th:value="'Secundaria'"> <label class="form-check-label"
-														for="inlineRadio1">Si</label>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="col">
-										<div class="form-row">
-											<div class="col">
-												<label for="exampleFormControlInput6">Educ.
-													Técnico-Profesional (técnico medio o superior)</label>
-											</div>
-											<div class="col">
-												<div class="form-check form-check-inline">
-													<input th:field="*{estudios}" class="form-check-input" type="radio"
-														name="inlineRadioOptions" id="inlineRadio1"
-														th:value="'Técnico-Profesional'"> <label class="form-check-label"
-														for="inlineRadio1">Si</label>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="col">
-										<div class="form-row">
-											<div class="col">
-												<label for="exampleFormControlInput7">Educ.
-													Universitaria</label>
-											</div>
-											<div class="col">
-												<div class="form-check form-check-inline">
-													<input th:field="*{estudios}" class="form-check-input" type="radio"
-														name="inlineRadioOptions" id="inlineRadio1"
-														th:value="'Universitarios'"> <label class="form-check-label"
-														for="inlineRadio1">Si</label>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="form-row"></div>
-							</fieldset>
-						</div>
-						<br>
-						<fieldset class="form-group border p-3">
-							<legend class="col-form-label col-sm-2 pt-0">Edad</legend>
-							<div class="form-group">
-								<div class="form-row">
-									<div class="col">
-										<label for="exampleFormControlInput9">Desde:</label>
-										<div class="col">
-											<input th:field="*{edad_desde}" type="text" class="form-control" placeholder="Edad...">
-										</div>
-									</div>
-									<div class="col">
-										<label for="exampleFormControlInput9">Hasta:</label>
-										<div class="col">
-											<input th:field="*{edad_hasta}" type="text" class="form-control" placeholder="Edad...">
-										</div>
-									</div>
-								</div>
-							</div>
-						</fieldset>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-secondary">Limpiar
-							</button>
-							<button type="submit" class="btn btn-success">Grabar</button>
-						</div>
-					</form>
-					<br>
-					<div th:class="${clase}" role="alert" th:text="${mensaje}"></div>
-				</div>
-			</div>
-		</div>
-	</div>
 	<div class="mt-3">
 		<table id="example" class="table table-striped" style="width: 100%">
 			<thead>
 				<tr>
-					<th>CÓDIGO</th>
-					<th>Atributo</th>
-					<th>Atributo</th>
-					<th>Atributo</th>
-					<th>Atributo</th>
-					<th>Atributo</th>
+					<th>Clave</th>
+					<th>Nombre del Puesto</th>
+					<th>Unidad Organica</th>
+					<th>Turno</th>
+					<th>Estudios Requeridos</th>
 					<th></th>
 					<th></th>
 				</tr>
 			</thead>
 			<tbody>
-				<c:forEach items="${requestScope.trabajadores}" var="row">
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td><button type="button" class="btn btn-success"
-								data-bs-toggle="modal" data-bs-target="#staticBackdrop">Editar</button></td>
-						<td><button type="button" class="btn btn-danger"
-								data-bs-toggle="modal" data-bs-target="#modalEliminar">Eliminar</button></td>
-					</tr>
-				</c:forEach>
+				<tr th:each="p: ${lstPerPue}">
+					<td th:text="${p.clave_perfil}"></td>
+					<td th:text="${p.nombre}"></td>
+					<td th:text="${p.objUniOrg.nom_uo}"></td>
+					<td th:text="${p.turno}"></td>
+					<td th:text="${p.estudios}"></td>
+					<td>
+						<form action="/buscarPerfil" method="post">
+							<input type="hidden" name="clave_perfil" th:value="${p.clave_perfil}">
+							<button type="submit" class="btn btn-success">Editar</button>						
+						</form>
+					</td>
+					<td>
+						<form action="/eliminarPerfil" method="post">
+							<input type="hidden" name="clave_perfil" th:value="${p.clave_perfil}">
+							<button type="submit" class="btn btn-danger">Eliminar</button>						
+						</form>
+					</td>
+				</tr>
 			</tbody>
 		</table>
 	</div>
