--- a/src/main/resources/templates/principal.html
+++ b/src/main/resources/templates/principal.html
@@ -8,11 +8,65 @@
 </head>
 <body>
 	<!-- INSERTAR MENU LATERAL -->
-	<div class="" th:replace="menulateral::menu"></div>
+	<div class="menu_lateral__container" th:fragment="menu">
+
+		<div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark"
+			style="height: 100%;">
+			<a href="/"
+				class="d-flex justify-content-center m-2 text-white text-decoration-none">
+				<object data="resources/svg/logo.svg" width="60" height="60">
+				</object>
+				<h1 class="txt-bold">SBN</h1>
+			</a>
+			<hr class="dropdown-divider">
+			<img src="https://github.com/mdo.png" alt=""
+				class="rounded-circle me-2 mx-auto mb-2" style="width: 250px;">
+			<div class="container text-center mb-1">
+				<h6 class="txt-bold">CARGO</h6>
+				<p>Jefe</p>
+				<h6 class="txt-bold">UNIDAD ORGANICA</h6>
+				<p>Unidad de Organizicion del Ministerio de vivienda</p>
+			</div>
+			<ul class="nav nav-pills flex-column mb-auto">
+				<li class="nav-item"><a href="/home" class="nav-link active"
+					aria-current="page"> <svg class="bi me-2" width="16"
+							height="16">
+						<use xlink:href="#home" /></svg> Home
+				</a></li>
+				<li><a href="/monstrarPagEmpleado" class="nav-link text-white">
+						<svg class="bi me-2" width="16" height="16">
+						<use xlink:href="#speedometer2" /></svg> Listado Empleados
+				</a></li>
+				<li><a href="/listarPerPue" class="nav-link text-white"> <svg
+							class="bi me-2" width="16" height="16">
+						<use xlink:href="#table" /></svg> Listado Perfiles de Puestos
+				</a></li>
+				<li><a href="#" class="nav-link text-white"> <svg
+							class="bi me-2" width="16" height="16">
+						<use xlink:href="#grid" /></svg> Modulo 3
+				</a></li>
+				<li><a href="#" class="nav-link text-white"> <svg
+							class="bi me-2" width="16" height="16">
+						<use xlink:href="#people-circle" /></svg> Modulo 4
+				</a></li>
+			</ul>
+			<hr class="dropdown-divider">
+			<div class="dropdown">
+				<button class="btn btn-secondary dropdown-toggle" type="button"
+					id="dropdownMenuButton1" data-bs-toggle="dropdown"
+					aria-expanded="false">Dwight Anthony Huanca Torres</button>
+				<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+					<li><a class="dropdown-item" href="#">Profile</a></li>
+					<li><hr class="dropdown-divider"></li>
+					<li><a class="dropdown-item" href="#">Sing Out</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
 	<header class="encabezado block"> Header </header>
 	<div class="contenido">
 		<!--<div th:replace="perfilesPuesto::perfilpuesto"></div>-->
-		<div th:replace="empleados::empleado">
+		<div th:replace="${pagina} :: ${modulo}"></div>
 	</div>
 </body>
 </html>
