--- a/src/main/resources/templates/mantPerPue.html
+++ b/src/main/resources/templates/mantPerPue.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+<meta charset="UTF-8">
+<title>Principal</title>
+
+<link rel="stylesheet" th:href="@{resources/css/principal.css}" />
+<div th:replace="librerias::librerias" th:remove="tag"></div>
+</head>
+<body>
+ <!--<div class=""  th:fragment="empleado" >   --><div class=""  th:replace="principal :: menu"> </div>
+ <header class="encabezado block" th:replace="principal :: headerPrin"> Header </header>
+ 
 <div class="contenido" th:fragment="regPerPue">
 	<div class="">
 		<form th:action="@{/grabarPerPue}" method="post"
@@ -147,3 +160,5 @@
 	</div>
 </div>
 <script src="resources/js/mantValida.js"></script>
+</body>
+</html>
