--- a/src/main/resources/templates/mantEmpleado.html
+++ b/src/main/resources/templates/mantEmpleado.html
@@ -1,4 +1,17 @@
-<div class="contenido" th:fragment="mantEmpleado">
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+<meta charset="UTF-8">
+<title>Principal</title>
+
+<link rel="stylesheet" th:href="@{resources/css/principal.css}" />
+<div th:replace="librerias::librerias" th:remove="tag"></div>
+</head>
+<body>
+ <!--<div class=""  th:fragment="empleado" >   --><div class=""  th:replace="principal :: menu"> </div>
+ <header class="encabezado block" th:replace="principal :: headerPrin"> Header </header>
+ 
+<div class="contenido" >
 		<div class="">
 			<form th:action="@{/grabarEmpleado}" method="post"
 				th:object="${empleado}" id="formulario" class="form-row needs-validation" novalidate>
