--- a/src/main/resources/templates/mantEmpleado.html
+++ b/src/main/resources/templates/mantEmpleado.html
@@ -8,8 +8,8 @@
 <div th:replace="librerias::librerias" th:remove="tag"></div>
 </head>
 <body>
- <!--<div class=""  th:fragment="empleado" >   --><div class=""  th:replace="principal :: menu"> </div>
- <header class="encabezado block" th:replace="principal :: headerPrin"> Header </header>
+<div class=""  th:replace="principal :: menu"> </div>
+<header class="encabezado block" th:replace="principal :: headerPrin"> Header </header>
  
 <div class="contenido" >
 		<div class="">
