--- a/src/main/resources/templates/perfilesPuesto.html
+++ b/src/main/resources/templates/perfilesPuesto.html
@@ -7,7 +7,7 @@
 <div th:replace="librerias::librerias" th:remove="tag"></div>
 </head>
 <body>
- <!--<div class=""  th:fragment="empleado" >   --><div class=""  th:replace="principal :: menu"> </div>
+<div class=""  th:replace="principal :: menu"> </div>
  <header class="encabezado block" th:replace="principal :: headerPrin"> Header </header>
 
 <div class="contenido">
