Se soluciono bug de mantenimientos

--- a/src/main/resources/templates/mantPerPue.html
+++ b/src/main/resources/templates/mantPerPue.html
@@ -14,7 +14,7 @@
 <div class="contenido" th:fragment="regPerPue">
 	<div class="">
 		<form th:action="@{/grabarPerPue}" method="post"
-			th:object="${perfilPuesto}" id="formulario"
+			th:object="${perfilpuesto}" id="formulario"
 			class="form-row needs-validation" novalidate>
 			<fieldset class="form-group border p-3">
 				<legend class="col-form-label col-sm-2 pt-0">Encabezado</legend>
