se controlo excepciones de mant

--- a/src/main/resources/templates/empleados.html
+++ b/src/main/resources/templates/empleados.html
@@ -13,6 +13,7 @@
 	<center>
 		<h1>EMPLEADOS</h1>
 	</center>
+	<div th:class="${clase}" role="alert" th:text="${mensaje}"></div>
 	<header class="cabezera d-block">
 		<a href="/cargarEmpleado" class="btn btn-primary">
 			Registrar Empleado
