--- a/src/main/resources/templates/mantPerPue.html
+++ b/src/main/resources/templates/mantPerPue.html
@@ -27,7 +27,7 @@
 							<div class="col">
 								<input th:field="*{nombre}" type="text" class="form-control"
 									id="validationCustom01" placeholder="Nombre del puesto..."
-									required pattern="[a-zA-ZñÑáéíóúÁÉÍÓÚ\s]{2,30}">
+									required pattern="[a-zA-ZñÑáéíóúÁÉÍÓÚ\s\(\)]{2,30}">
 							</div>
 							<div class="invalid-feedback">Ingrese el puesto
 								correctamente.</div>
