--- a/src/main/resources/static/resources/css/principal.css
+++ b/src/main/resources/static/resources/css/principal.css
@@ -15,6 +15,9 @@ body{
 	background: #EA1C24; 
 	grid-row: 1;
 	grid-column: 2;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
 }
 .contenido{
 	grid-row: 2;
