--- a/src/main/resources/templates/perfilesPuesto.html
+++ b/src/main/resources/templates/perfilesPuesto.html
@@ -14,12 +14,15 @@
 	<center>
 		<h1>PERFILES DE PUESTOS</h1>
 	</center>
+	<div th:class="${clase}" role="alert" th:text="${mensaje}"></div>
 	<header class="cabezera d-block">
 		<a href="/cargarPerPue" class="btn btn-primary">
 			Registrar Perfil de Puesto
 		</a>
+		
 	</header>
 	<div class="mt-3">
+	
 		<table id="example" class="table table-striped" style="width: 100%">
 			<thead>
 				<tr>
