Se programo los reportes

--- a/src/main/resources/templates/empleados.html
+++ b/src/main/resources/templates/empleados.html
@@ -56,6 +56,11 @@
 				</tr>
 			</tbody>
 		</table>
+		<br>
+		<div class="d-flex p-3 bg-warning-light">
+			<a href="/rSexo" class="btn btn-primary mx-3" target="_black">Reporte por Sexo</a>
+			<a href="/rUO" class="btn btn-primary" target="_black">Reporte por Unidad Organica</a>
+		</div>
 	</div>
 </div>
 </body>
