--- a/src/main/resources/templates/empleados.html
+++ b/src/main/resources/templates/empleados.html
@@ -63,5 +63,10 @@
 		</div>
 	</div>
 </div>
+<script type="text/javascript">
+$(document).ready(function () {
+    $('#example').DataTable();
+});
+</script>
 </body>
 </html>
