--- a/src/main/resources/templates/proveedoresLista.html
+++ b/src/main/resources/templates/proveedoresLista.html
@@ -58,5 +58,10 @@
 		</table>
 	</div>
 </div>
+<script type="text/javascript">
+$(document).ready(function () {
+    $('#example').DataTable();
+});
+</script>
 </body>
 </html>
