--- a/src/main/resources/templates/verMemorandums.html
+++ b/src/main/resources/templates/verMemorandums.html
@@ -42,5 +42,10 @@
 		</table>
 	</div>
 </div>
+<script type="text/javascript">
+$(document).ready(function () {
+    $('#example').DataTable();
+});
+</script>
 </body>
 </html>
