Se arreglo el bug del mant perpue y otros

--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -3,9 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Login</title>
-
-<div th:replace="librerias::librerias" th:remove="tag"></div>
 </head>
+<div th:replace="librerias::librerias" th:remove="tag"></div>
 <style>
 /* Styles del Login*/
 .color-login{
@@ -37,8 +36,7 @@ form > .boton_submit{
 }
 </style>
 <body style="height: 100vh">
-	<div
-		class="container-fluid bg-danger p-2 d-flex justify-content-center">
+	<div class="container-fluid bg-danger p-2 d-flex justify-content-center">
 		<h4 class="text-cemter text-white">Año del Fortalecimiento de la
 			Soberanía Nacional</h4>
 	</div>
