--- a/src/main/resources/templates/mantProveedor.html
+++ b/src/main/resources/templates/mantProveedor.html
@@ -81,7 +81,7 @@
 				</div>
 			</form>
 			<br>
-			<div th:class="${claseProve}" role="alert" th:text="${mensajeProve}"></div>
+			<div th:class="${clase}" role="alert" th:text="${mensaje}"></div>
 		</div>
 	</div>
 	<script src="resources/js/mantValida.js"></script>
